--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="player"></div>
     <script>
         var player = new Clappr.Player({
-            source: 'https://dai.google.com/linear/hls/event/HynNobMPSu6nQCgpxsK0lQ/master.m3u8',
+            source: 'https://sonydaimenew.akamaized.net/hls/live/2094588/DAI04ME-V3/master_mdh.m3u8?hdnea=exp=1738960595~acl=/*~id=70535385199840554202505369813840~hmac=38c189b18432b2e5b405c1df21d7f9c663c9af621d36902123a5055bb5149ba2',
             width: '100%',
             height: '100%',
             autoPlay: true,
